--- a/index.html
+++ b/index.html
@@ -20,44 +20,44 @@
   <h1>Demo&nbsp;of Uploadcare CKEditor Plugin</h1>
 
   <p>
-    <a href="https://ckeditor.com/cke4/addon/uploadcare">Uploadcare CKEditor Plugin</a>&nbsp;&nbsp;
+    <a href="https://ckeditor.com/cke4/addon/uploadcare">About plugin</a>&nbsp;&nbsp;
     <a href="https://github.com/uploadcare/uploadcare-ckeditor">Github repo</a>&nbsp;&nbsp;
-    <a
-      href="https://uploadcare.com/documentation/?utm_source=github&utm_campaign=uploadcare-ckeditor&utm_content=demo">
-      Uploadcare Docs</a>
+    <a href="https://github.com/uploadcare/uploadcare-ckeditor/tree/gh-pages">Demo source</a>&nbsp;&nbsp;
+    <a href="https://github.com/uploadcare/uploadcare-ckeditor/zipball/master">Download .zip</a>&nbsp;&nbsp;
+    <a href="https://github.com/uploadcare/uploadcare-ckeditor/tarball/master">Download .tar.gz</a>
   </p>
 
   <textarea id="demo-editor">
     <p>Insert an image by clicking Uploadcare logo in CKEditor toolbar.</p>
   </textarea>
 
-  <pre><code class="javascript">
-UPLOADCARE_PUBLIC_KEY = 'demopublickey';
+  <pre><code>UPLOADCARE_PUBLIC_KEY = 'demopublickey';
 CKEDITOR.replace('demo-editor', {
-    extraPlugins: 'uploadcare',
-    toolbar: [
-        ['Uploadcare', 'Image'], ['Source', 'About']
-    ],
-    uploadcare: {
-        multiple: true
-    }
+  extraPlugins: 'uploadcare',
+  toolbar: [['Uploadcare', 'Image'], ['Source', 'About']],
+  uploadcare: {multiple: true}
 });
 </code></pre>
-</div>
 
-<script>
-  CKEDITOR.replace('demo-editor', {
-    customConfig: '',
-    height: '300px',
-    extraPlugins: 'uploadcare',
-    toolbar: [
-      ['Uploadcare', 'Image'], ['Source', 'About']
-    ],
-    uploadcare: {
-      multiple: true
-    }
-  })
-</script>
+  <script>
+    CKEDITOR.replace('demo-editor', {
+      customConfig: '',
+      height: '300px',
+      extraPlugins: 'uploadcare',
+      toolbar: [
+        ['Uploadcare', 'Image'], ['Source', 'About']
+      ],
+      uploadcare: {
+        multiple: true
+      }
+    })
+  </script>
+
+  <p style="text-align: center">
+    Powered by <a
+    href="https://uploadcare.com/?utm_source=github&utm_campaign=uploadcare-ckeditor&utm_content=demo">Uploadcare</a>
+  </p>
+</div>
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-25057731-12"></script>
