--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 CKEDITOR.replace('demo-editor', {
   extraPlugins: 'uploadcare',
   toolbar: [['Uploadcare', 'Image'], ['Source', 'About']],
-  uploadcare: {multiple: true}
+  uploadcare: {multiple: true},
 });
 </code></pre>
 
@@ -44,12 +44,8 @@ CKEDITOR.replace('demo-editor', {
       customConfig: '',
       height: '300px',
       extraPlugins: 'uploadcare',
-      toolbar: [
-        ['Uploadcare', 'Image'], ['Source', 'About']
-      ],
-      uploadcare: {
-        multiple: true
-      }
+      toolbar: [['Uploadcare', 'Image'], ['Source', 'About']],
+      uploadcare: {multiple: true},
     })
   </script>
 
