fix demo plugin url

--- a/demo/index.html
+++ b/demo/index.html
@@ -11,7 +11,7 @@
   <script>
     UPLOADCARE_PUBLIC_KEY = 'demopublickey'
 
-    CKEDITOR.plugins.addExternal('uploadcare', '/uploadcare-ckeditor/', 'plugin.js')
+    CKEDITOR.plugins.addExternal('uploadcare', '/../plugin.js')
   </script>
 </head>
 
