--- a/index.html
+++ b/index.html
@@ -1,13 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Upload files with Uploadcare</title>
+  <meta charset="utf-8">
+  <title>Demo of Uploadcare CKEditor Plugin</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <link rel="stylesheet" href="fonts.css">
+  <link rel="stylesheet" href="app.css">
+
+  <script src="https://cdn.ckeditor.com/4.8.0/standard/ckeditor.js"></script>
   <script>
-    window.location = 'demo'
+    UPLOADCARE_PUBLIC_KEY = 'demopublickey'
+
+    CKEDITOR.plugins.addExternal('uploadcare', '/uploadcare-ckeditor/', 'plugin.js')
   </script>
 </head>
+
 <body>
-<a href="demo">Go to the demo</a>
+<div class="content">
+  <h1>Demo&nbsp;of Uploadcare CKEditor Plugin</h1>
+
+  <p>
+    <a href="https://ckeditor.com/cke4/addon/uploadcare">About plugin</a>&nbsp;&nbsp;
+    <a href="https://github.com/uploadcare/uploadcare-ckeditor">Github repo</a>&nbsp;&nbsp;
+    <a href="https://github.com/uploadcare/uploadcare-ckeditor/tree/gh-pages">Demo source</a>&nbsp;&nbsp;
+    <a href="https://github.com/uploadcare/uploadcare-ckeditor/zipball/master">Download .zip</a>&nbsp;&nbsp;
+    <a href="https://github.com/uploadcare/uploadcare-ckeditor/tarball/master">Download .tar.gz</a>
+  </p>
+
+  <textarea id="demo-editor">
+    <p>Insert an image by clicking Uploadcare logo in CKEditor toolbar.</p>
+  </textarea>
+
+  <pre><code>UPLOADCARE_PUBLIC_KEY = 'demopublickey';
+CKEDITOR.replace('demo-editor', {
+  extraPlugins: 'uploadcare',
+  toolbar: [['Uploadcare', 'Image'], ['Source', 'About']],
+  uploadcare: {multiple: true},
+});
+</code></pre>
+
+  <script>
+    CKEDITOR.replace('demo-editor', {
+      customConfig: '',
+      height: '300px',
+      extraPlugins: 'uploadcare',
+      toolbar: [['Uploadcare', 'Image'], ['Source', 'About']],
+      uploadcare: {multiple: true},
+    })
+  </script>
+
+  <p style="text-align: center">
+    Powered by <a
+    href="https://uploadcare.com/?utm_source=github&utm_campaign=uploadcare-ckeditor&utm_content=demo">Uploadcare</a>
+  </p>
+</div>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-25057731-12"></script>
+<script>
+  window.dataLayer = (window.dataLayer || [])
+
+  function gtag() {dataLayer.push(arguments)}
+
+  gtag('js', new Date())
+  gtag('config', 'UA-25057731-12')
+</script>
 </body>
 </html>
