--- a/demo/index.html
+++ b/demo/index.html
@@ -11,7 +11,7 @@
   <script>
     UPLOADCARE_PUBLIC_KEY = 'demopublickey'
 
-    CKEDITOR.plugins.addExternal('uploadcare', window.location.path + '../dist/uploadcare/', 'plugin.js')
+    CKEDITOR.plugins.addExternal('uploadcare', window.location.pathname + '../dist/uploadcare/', 'plugin.js')
   </script>
 </head>
 
