change index title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Upload files with Uploadcare</title>
+  <title>Uploadcare CKEditor Plugin</title>
   <script>
     window.location = 'demo'
   </script>
