Update demo, add `start` npm script

--- a/index.html
+++ b/index.html
@@ -2,12 +2,23 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Uploadcare CKEditor Plugin</title>
+  <title>File Uploader by Uploadcare, CKEditor Plugin</title>
   <script>
     window.location = 'demo'
   </script>
 </head>
 <body>
 <a href="demo">Go to the demo</a>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-25057731-12"></script>
+<script>
+  window.dataLayer = (window.dataLayer || [])
+
+  function gtag() {dataLayer.push(arguments)}
+
+  gtag('js', new Date())
+  gtag('config', 'UA-25057731-12')
+</script>
 </body>
 </html>
