--- a/demo/index.html
+++ b/demo/index.html
@@ -2,41 +2,41 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Demo of Uploadcare CKEditor Plugin</title>
+  <title>Demo of File Uploader by Uploadcare, CKEditor Plugin</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <link rel="stylesheet" href="fonts.css">
   <link rel="stylesheet" href="app.css">
 
   <script src="https://cdn.ckeditor.com/4.9.2/standard/ckeditor.js"></script>
   <script>
-    UPLOADCARE_PUBLIC_KEY = 'demopublickey'
-
     CKEDITOR.plugins.addExternal('uploadcare', window.location.pathname + '../dist/uploadcare/', 'plugin.js')
   </script>
 </head>
 
 <body>
 <div class="content">
-  <h1>Demo&nbsp;of Uploadcare CKEditor Plugin</h1>
+  <h1>Demo&nbsp;of File Uploader by Uploadcare, CKEditor plugin</h1>
 
   <p>
     <a href="https://ckeditor.com/cke4/addon/uploadcare">About plugin</a>&nbsp;&nbsp;
     <a href="https://github.com/uploadcare/uploadcare-ckeditor">Github repo</a>&nbsp;&nbsp;
-    <a href="https://github.com/uploadcare/uploadcare-ckeditor/tree/gh-pages">Demo source</a>&nbsp;&nbsp;
-    <a href="https://github.com/uploadcare/uploadcare-ckeditor/releases">Releases</a>&nbsp;&nbsp;
-    <a href="https://github.com/uploadcare/uploadcare-ckeditor/zipball/release" download="uploadcare.zip">Download .zip</a>&nbsp;&nbsp;
-    <a href="https://github.com/uploadcare/uploadcare-ckeditor/tarball/release" download="uploadcare.tar.gz">Download .tar.gz</a>
+    <a href="https://github.com/uploadcare/uploadcare-ckeditor/releases">Releases</a>
   </p>
 
-  <textarea id="demo-editor">
-    <p>Insert an image by clicking Uploadcare logo in CKEditor toolbar.</p>
-  </textarea>
+  <h2>Demo</h2>
 
-  <pre><code>UPLOADCARE_PUBLIC_KEY = 'demopublickey';
-CKEDITOR.replace('demo-editor', {
+  <p>
+    <textarea id="demo-editor">
+    <p>Insert an image by clicking Uploadcare logo in CKEditor toolbar.</p>
+    </textarea>
+  </p>
+
+  <h2>Code</h2>
+
+  <pre><code>CKEDITOR.replace('demo-editor', {
   extraPlugins: 'uploadcare',
-  toolbar: [['Uploadcare', 'Image'], ['Source', 'About']],
-  uploadcare: {multiple: true},
+  toolbar: [['Uploadcare', 'Image'], ['Source']],
+  uploadcare: {publicKey: 'demopublickey'},
 });
 </code></pre>
 
@@ -45,8 +45,8 @@ CKEDITOR.replace('demo-editor', {
       customConfig: '',
       height: '300px',
       extraPlugins: 'uploadcare',
-      toolbar: [['Uploadcare', 'Image'], ['Source', 'About']],
-      uploadcare: {multiple: true},
+      toolbar: [['Uploadcare', 'Image'], ['Source']],
+      uploadcare: {publicKey: 'demopublickey'},
     })
   </script>
 
