fix assets copying

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>File Uploader by Uploadcare, CKEditor Plugin</title>
   <script>
-    window.location = 'demo'
+    window.location = '/demo/'
   </script>
 </head>
 <body>
